== Master

* Bump Rack to 2.2.4

* Simplify Rake task to generate random 64 bytes string

* Remove the required ruby version in Gemfile

* Remove hardcoded text in custom Rodauth templates with values provided by the framework (for incoming I18n)

* Set session inactivity deadline to 60 hours (previously 30)

* Add the timestamp_paths assets plugin option for development

* use CDNs for Bootstrap 5 and Chartjs


== 0.11.0

* Bump ruby to 3.1.2 (from 3.1.1)

* Allow visiting about page without authentication

* Add a Boostrap 5 popover on the copy recovery codes button

* Add a 100 rows cap to audit logging

* add pagination for the security logs page

== 0.10.0

* add a lowest and highest weight stats on entries index page

* add a lowest and highest bmi stats on entries index page

* add the Password Reset Notify feature (from rodauth 2.22.0)

Base version == 0.9.0